/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.producto_academico_01;

/**
 *
 * @author JOSE
 */
public class Ambiente {
    private String codigo;
    private String nombre_largo;
    private String nombre_corto;
    private float area;
    
    public void registrarAmbiente() {
    }
}
