/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.producto_academico_01;

/**
 *
 * @author JOSE
 */
public class Docente extends Persona {
    private String resumen_ejecutivo;
    
    public void registrarDocente() {
    }
}
