/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.producto_academico_01;

/**
 *
 * @author JOSE
 */
public class Grupo {
    private String codigo;
    private String fecha_creacion;
    
    public void agregarAlumno(String codigo_alumno) {
    }
    
    public void listarGrupo(String fecha_creacion) {
    }
}
