/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.producto_academico_01;

/**
 *
 * @author JOSE
 */
public class Sesion {
    private String fecha_dictado;
    private String tema;
    private int dificultad;
    private String descripcion;
    
    public void registrarSesion() {
        
    }
    
    public void listarSesion(String fecha_inicio, String fecha_final) {
        
    }
}
